--- a/index.css
+++ b/index.css
@@ -485,15 +485,15 @@ figcaption {
 @media only screen and (max-width: 415px) {
   .left-hero {
     padding: 2rem;
-    margin-top: 120px;
+    margin-top: 200px;
     padding-bottom: 0;
   }
 
   #hero__img {
-    padding-top: 270px;
+    padding-top: 300px;
     position: absolute;
-    width: 360px;
-    height: 760px;
+    width: 100%;
+    height: 100%;
     margin-bottom: 0;
   }
 
