--- a/index.css
+++ b/index.css
@@ -351,6 +351,10 @@ figcaption {
   color: rgb(229, 229, 229);
 }
 
+.ftr a {
+  text-decoration: none;
+}
+
 /* This is a media query. It is saying that if the screen is less than 769px, then do the following. */
 @media only screen and (max-width: 769px) {
   .hamburger {
